--- a/projects.html
+++ b/projects.html
@@ -67,6 +67,10 @@
       </nav>
 
       <!-- *********** REST ************* -->
+      <!-- Add:
+      * Locations of Justice
+      * Elecciones en el mundo
+      * Data through design -->
       <div class="container">
         <div class="subtitle">
           <p>ALL PROJECTS</p>
@@ -96,29 +100,52 @@
             </a>
           </div>
         </div>
-        <!-- <div class="row">
+        <div class="row">
           <div class="col-md-4">
-            <a class="project-thumb" href="projects/gsappAP.html">
+            <a class="project-thumb" href="projects/eleccionesMundo.html">
+              <img class="img-responsive" src="assets/img/thumbs/eleccionesMundo_alt.png" alt="thumb">
+              <h2 class="project-title">ELECCIONES EN EL MUNDO</h2>
+              <p class="project-summary">An interactive map showing all upcoming (2017 - 2019) political elections around the world. In Spanish.</p>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a class="project-thumb" href="projects/locationsJustice.html">
+              <img class="img-responsive" src="assets/img/thumbs/LocationsOfJustice.png" alt="thumb">
+              <h2 class="project-title">LOCATIONS OF JUSTICE</h2>
+              <p class="project-summary">An interactive mapping project documenting the reach and locations of the institutions and agencies involved in New York City's criminal justice system.</p>
+            </a>
+          </div>
+          <div class="col-md-4">
+            <a class="project-thumb" href="projects/dataThroughDesign.html">
+              <img class="img-responsive" src="assets/img/thumbs/HowWeDie.png" alt="thumb">
+              <h2 class="project-title">HOW WE DIE</h2>
+              <p class="project-summary">A dynamic topographical installation that visualizes the leading causes of death in New York City between 2007 and 2013.</p>
+            </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <a class="project-thumb" href="projects/scienceSurveyor.html">
               <img class="img-responsive" src="assets/img/thumbs/scienceSurveyor.png" alt="thumb">
               <h2 class="project-title">SCIENCE SURVEYOR</h2>
               <p class="project-summary">Using the abstract and citations of a peer-reviewed paper, Science Surveyor provides journalists context about that paper in several easy-to-read visualizations.</p>
             </a>
           </div>
           <div class="col-md-4">
-            <a class="project-thumb" href="projects/roadToParis.html">
+            <a class="project-thumb" href="projects/havenProject.html">
               <img class="img-responsive" src="assets/img/thumbs/havenProject.png" alt="thumb">
               <h2 class="project-title">THE HAVEN PROJECT</h2>
               <p class="project-summary">An interactive mapping and data visualization project that analyzes health and environmental metrics for New York City, and the South Bronx in particular.</p>
             </a>
           </div>
           <div class="col-md-4">
-            <a class="project-thumb" href="projects/barcelonaCycleChallenge.html">
+            <a class="project-thumb" href="projects/portToPort.html">
               <img class="img-responsive" src="assets/img/thumbs/portToPort.png" alt="thumb">
               <h2 class="project-title">PORT TO PORT</h2>
               <p class="project-summary">An interactive data visualization and mapping analysis of 6 years of oil shipment routes to and from U.S. ports.</p>
             </a>
           </div>
-        </div> -->
+        </div>
         <div class="row">
           <div class="col-md-4">
             <a class="project-thumb" href="projects/gsappAP.html">
