--- a/projects/dataThroughDesign.html
+++ b/projects/dataThroughDesign.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="GSAPP.AP visualizes the responses of 5 years of GSAPP graduates in an attempt to capture and analyze the state and evolution of the school's alumni. Based on a previous survey of the 2012 Masters of Architecture class, GSAPP.AP compares the different disciplines and graduating classes that make up the school, thus providing insights into the school's professions and helping record the different paths its graduates have taken.">
+  <meta name="description" content="Social Media and the Psychological City - An early study of check-in data, trying to visualize it and to understand what it can tell us about our cities.">
   <meta name="keywords" content="data visualization, mapping, GIS, data analysis, interactive, information, design, visualization, data mining, information design, information visualization, urban planning, architecture, humanities, center for spatial research, columbia university, gsapp, graduate school or architecture planning and preservation, humanities, new york">
   <meta name="author" content="Juan Francisco Saldarriaga">
   <title>Juanfrans</title>
@@ -68,51 +68,66 @@
 
       <!-- *********** REST ************* -->
       <div class="container">
-        <img class="img-responsive" src="../assets/img/gsappAP/map.png">
+        <img class="img-responsive" src="../assets/img/DataThroughDesign/Death_01.png">
       </div>
       <div class="container">
         <div class="project-title">
-          <p>GSAPP ALUMNI PROJECT</p>
+          <p>HOW WE DIE</p>
         </div>
         <div class="project-subtitle">
-          <p>This project was developed in collaboration with Steven Sanchez.</p>
+          <p>This project was developed in collaboration with Steven Sanchez for the <a href="http://datathroughdesign.com/">Data Through Design</a> exhibition.</p>
         </div>
-        <div class="row">
-          <div class="col-md-4">
-          <div class="project-site-button" style="background-color:#66CCCC">
-            <a href="http://gsapp-ap.com/"><p>VISIT THE INTERACTIVE PROJECT SITE</p></a>
-          </div>
-        </div>
-      </div>
         <div class="project-description">
-          <p>GSAPP.AP visualizes the responses of 5 years of <a href="https://www.arch.columbia.edu/">GSAPP</a> graduates in an attempt to capture and analyze the state and evolution of the school's alumni. Based on a <a href="../assets/pdf/gsapp6mgrad.pdf">previous survey</a> of the 2012 Masters of Architecture class, GSAPP.AP compares the different disciplines and graduating classes that make up the school, thus providing insights into the school's professions and helping record the different paths its graduates have taken. <br><br>The initial questionnaire was sent out to more than 1,900 graduates over the months of February and March 2014, and it included questions about their background, their job search, their current jobs and their views towards the future. Specific questions like "how many job applications did you send before getting a job?" or "how many job interviews did you go to?" provided a glimpse into the hard process of getting a job in the middle of a recession.</p>
+          <p>Each year around 50,000 people die in New York City. Most of them from heart disease or cancer, others from diabetes or murder. But the causes of death remain varied and changing, and affect different populations differently. They are also growing or declining through time, and our methods for collecting, classifying, and reporting death are changing as well.</p>
+          <p>For this exhibition we proposed to make sense of this varied terrain through a dynamic and ethereal sculpture. With a topographic installation we sought to represent the leading causes of death in New York City, and their evolution from 2007 to 2014. Cycling through different configurations, the sculpture would morph and transform to display how these same causes of death affect the different ethnic groups as well as the different genders.</p>
           <div class="row">
             <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/applicationsInterviews.png">
+              <img class="img-responsive losO" src="../assets/img/DataThroughDesign/Death_02.png">
             </div>
             <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/lengthJobSearch.png">
+              <img class="img-responsive losO" src="../assets/img/DataThroughDesign/Death_03.png">
             </div>
           </div>
-          <p>In addition, GSAPP.AP also delved into the often difficult to get salary information where differences between disciplines and, more importantly, gender are revealed. Right off from graduation, women are generally paid less than men and while certain fields display less of a discrepancy, the gender pay gap can be seen in all of them.</p>
+          <p>Above are the drawings from the original proposal.</p>
+          <p>However, after visiting the site our proposal had to go through a radical redesign due to installation restrictions. Instead of building a hanging sculpture, we now needed to create a topographic piece that would sit on a pedestal, and thus we needed to change the internal mechanics of the sculpture. Ultimately, these last minute changes led to an unfinished piece that still managed to be somewhat captivating.</p>
+          <p>The following images document the quick design and assemblage of this last iteration.</p>
           <div class="row">
             <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/salaryGeneral.png">
+              <img class="img-responsive losO" src="../assets/img/DataThroughDesign/Death_04.png">
             </div>
             <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/salaryGender.png">
+              <!-- <img class="img-responsive losO" src="../assets/img/DataThroughDesign/Death_03.png"> -->
             </div>
           </div>
-          <p>GSAPP.AP also looked into the types of companies graduates are working in, and the type of work they are doing, as well as people's stability in those companies and their reasons for changing jobs. We asked graduates about their prospects for the future, would they get an official license in their fields, and / or would they go on their own and start their own companies. Finally, we ended the survey with some questions about their level of satisfaction with their education.<br><br>Our conclusion of the study was the following: "GSAPP graduates are mostly employed in the field of their choosing, live on the eastern coast of the United States, and have ambitions of advancing in their respected professions. Although their are outliers, graduates tend to be satisfied with their education and have been consistently employed since graduating."</p>
+          <p>A quick sketch with the modified proposal.</p>
           <div class="row">
             <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/employmentStatus.png">
+              <img class="img-responsive losO" src="../assets/img/DataThroughDesign/Death_05.png">
             </div>
             <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/reasonsChange.png">
+              <img class="img-responsive losO" src="../assets/img/DataThroughDesign/Death_06.png">
             </div>
           </div>
-          <p>To explore and interact with the full analysis please go to the <a href="http://gsapp-ap.com/">GSAPP.AP site</a>.</p>
+          <p>Testing the code and all the connections.</p>
+          <div class="row">
+            <div class="col-md-6">
+              <img class="img-responsive losO" src="../assets/img/DataThroughDesign/Death_07.png">
+            </div>
+            <div class="col-md-6">
+              <img class="img-responsive losO" src="../assets/img/DataThroughDesign/Death_08.png">
+            </div>
+          </div>
+          <p>Putting it all together.</p>
+          <div class="row">
+            <div class="col-md-6">
+              <img class="img-responsive losO" src="../assets/img/DataThroughDesign/Death_09.png">
+            </div>
+            <div class="col-md-6">
+              <img class="img-responsive losO" src="../assets/img/DataThroughDesign/Death_10.png">
+            </div>
+          </div>
+          <p>And the final piece. These last two photos are by Sam Hyatt.</p>
+          <p>Lots and lots of thanks to Natasa Papadi and the people organizing the exhibition for their enormous help in putting this piece together.</p>
         </div>
       </div>
 
