--- a/projects/eleccionesMundo.html
+++ b/projects/eleccionesMundo.html
@@ -68,51 +68,24 @@
 
       <!-- *********** REST ************* -->
       <div class="container">
-        <img class="img-responsive" src="../assets/img/gsappAP/map.png">
+        <img class="img-responsive" src="../assets/img/Elecciones_01.png">
       </div>
       <div class="container">
         <div class="project-title">
-          <p>GSAPP ALUMNI PROJECT</p>
+          <p>ELECCIONES EN EL MUNDO</p>
         </div>
         <div class="project-subtitle">
-          <p>This project was developed in collaboration with Steven Sanchez.</p>
+          <p>Created for the <a href="https://moe.org.co/">Misión de Observación Electoral</a> in Colombia.</p>
         </div>
         <div class="row">
           <div class="col-md-4">
-          <div class="project-site-button" style="background-color:#66CCCC">
-            <a href="http://gsapp-ap.com/"><p>VISIT THE INTERACTIVE PROJECT SITE</p></a>
+          <div class="project-site-button" style="background-color:#93c2d7">
+            <a href="https://juanfrans.com/moe_election_map/public/whiteBackground.html"><p>VISIT THE INTERACTIVE PROJECT SITE</p></a>
           </div>
         </div>
       </div>
         <div class="project-description">
-          <p>GSAPP.AP visualizes the responses of 5 years of <a href="https://www.arch.columbia.edu/">GSAPP</a> graduates in an attempt to capture and analyze the state and evolution of the school's alumni. Based on a <a href="../assets/pdf/gsapp6mgrad.pdf">previous survey</a> of the 2012 Masters of Architecture class, GSAPP.AP compares the different disciplines and graduating classes that make up the school, thus providing insights into the school's professions and helping record the different paths its graduates have taken. <br><br>The initial questionnaire was sent out to more than 1,900 graduates over the months of February and March 2014, and it included questions about their background, their job search, their current jobs and their views towards the future. Specific questions like "how many job applications did you send before getting a job?" or "how many job interviews did you go to?" provided a glimpse into the hard process of getting a job in the middle of a recession.</p>
-          <div class="row">
-            <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/applicationsInterviews.png">
-            </div>
-            <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/lengthJobSearch.png">
-            </div>
-          </div>
-          <p>In addition, GSAPP.AP also delved into the often difficult to get salary information where differences between disciplines and, more importantly, gender are revealed. Right off from graduation, women are generally paid less than men and while certain fields display less of a discrepancy, the gender pay gap can be seen in all of them.</p>
-          <div class="row">
-            <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/salaryGeneral.png">
-            </div>
-            <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/salaryGender.png">
-            </div>
-          </div>
-          <p>GSAPP.AP also looked into the types of companies graduates are working in, and the type of work they are doing, as well as people's stability in those companies and their reasons for changing jobs. We asked graduates about their prospects for the future, would they get an official license in their fields, and / or would they go on their own and start their own companies. Finally, we ended the survey with some questions about their level of satisfaction with their education.<br><br>Our conclusion of the study was the following: "GSAPP graduates are mostly employed in the field of their choosing, live on the eastern coast of the United States, and have ambitions of advancing in their respected professions. Although their are outliers, graduates tend to be satisfied with their education and have been consistently employed since graduating."</p>
-          <div class="row">
-            <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/employmentStatus.png">
-            </div>
-            <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/reasonsChange.png">
-            </div>
-          </div>
-          <p>To explore and interact with the full analysis please go to the <a href="http://gsapp-ap.com/">GSAPP.AP site</a>.</p>
+          <p>This interactive map highlights upcoming elections around the world and allows the user to filter them by type, region, and year. In addition, details of the elections are available in the popup window, along with a "Polity" score, measuring the level of democracy or authoritarianism in each country.</p>
         </div>
       </div>
 
