--- a/projects/environmental.html
+++ b/projects/environmental.html
@@ -77,6 +77,13 @@
         <div class="project-subtitle">
           <p>This project was developed in collaboration with David King, Assistant Professor of Urban Planning, School of Geographical Sciences and Urban Planning, Arizona State University.</p>
         </div>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="project-site-button" style="background-color:#cccccc">
+              <a href="https://www.jtlu.org/index.php/jtlu/article/download/1063/1000"><p>DOWNLOAD THE RESEARCH PAPER</p></a>
+            </div>
+          </div>
+        </div>
         <div class="project-description">
           <p>Taxicabs are ubiquitous in cities throughout the world, and the industry is going through tremendous regulatory change with
              the growth of app-based taxi services. In the United States, where taxicabs are typically regulated locally, licenses allow
