--- a/projects/havenProject.html
+++ b/projects/havenProject.html
@@ -68,51 +68,42 @@
 
       <!-- *********** REST ************* -->
       <div class="container">
-        <img class="img-responsive" src="../assets/img/gsappAP/map.png">
+        <img class="img-responsive" src="../assets/img/HavenProject_01.png">
       </div>
       <div class="container">
         <div class="project-title">
-          <p>GSAPP ALUMNI PROJECT</p>
+          <p>NYRP - THE HAVEN PROJECT</p>
         </div>
         <div class="project-subtitle">
-          <p>This project was developed in collaboration with Steven Sanchez.</p>
+          <p>This project was developed at the <a href="http://spatialinformationdesignlab.org/">Spatial Information Design Lab</a>, in collaboration with <a href="https://www.nyrp.org/">New York Restoration Project</a>.</p>
         </div>
         <div class="row">
           <div class="col-md-4">
-          <div class="project-site-button" style="background-color:#66CCCC">
-            <a href="http://gsapp-ap.com/"><p>VISIT THE INTERACTIVE PROJECT SITE</p></a>
+          <div class="project-site-button" style="background-color:#fedcb0">
+            <a href="http://spatialinformationdesignlab.org/project_sites/the-haven-project/"><p>VISIT THE INTERACTIVE PROJECT SITE</p></a>
           </div>
         </div>
       </div>
         <div class="project-description">
-          <p>GSAPP.AP visualizes the responses of 5 years of <a href="https://www.arch.columbia.edu/">GSAPP</a> graduates in an attempt to capture and analyze the state and evolution of the school's alumni. Based on a <a href="../assets/pdf/gsapp6mgrad.pdf">previous survey</a> of the 2012 Masters of Architecture class, GSAPP.AP compares the different disciplines and graduating classes that make up the school, thus providing insights into the school's professions and helping record the different paths its graduates have taken. <br><br>The initial questionnaire was sent out to more than 1,900 graduates over the months of February and March 2014, and it included questions about their background, their job search, their current jobs and their views towards the future. Specific questions like "how many job applications did you send before getting a job?" or "how many job interviews did you go to?" provided a glimpse into the hard process of getting a job in the middle of a recession.</p>
+          <p>New York Restoration Project (NYRP) is developing a master plan to renovate a network of open spaces in Mott Haven and Port Morris in the South Bronx. Over the next several years, NYRP will fund the renovations and build them. The project aims to demonstrate measurable health and social outcomes resulting from an improved physical environment at the neighborhood scale. For example, one hypothesis is that by improving access to Randall’s Island, residents’ physical activity will increase with a correlative decrease in health care costs. As a first step, we will capture baseline health data and quality of life indicators which we will track as the project progresses. Through the maps and charts on this site we attempt to analyze and compare different parts of New York City according to specific health, demographic and environmental metrics.</p>
           <div class="row">
             <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/applicationsInterviews.png">
+              <img class="img-responsive losO" src="../assets/img/HavenProject_02.png">
             </div>
             <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/lengthJobSearch.png">
+              <img class="img-responsive losO" src="../assets/img/HavenProject_03.png">
             </div>
           </div>
-          <p>In addition, GSAPP.AP also delved into the often difficult to get salary information where differences between disciplines and, more importantly, gender are revealed. Right off from graduation, women are generally paid less than men and while certain fields display less of a discrepancy, the gender pay gap can be seen in all of them.</p>
+          <p>This detailed view of Mott Haven and Port Morris shows each environmental and demographic metric at a more detailed scale. In addition, you can see how implementing the Randall's Island Connector - an NYCEDC project - will change the distance to open spaces metric for the neighborhood.</p>
           <div class="row">
             <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/salaryGeneral.png">
+              <img class="img-responsive losO" src="../assets/img/HavenProject_06.png">
             </div>
             <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/salaryGender.png">
+              <img class="img-responsive losO" src="../assets/img/HavenProject_07.png">
             </div>
           </div>
-          <p>GSAPP.AP also looked into the types of companies graduates are working in, and the type of work they are doing, as well as people's stability in those companies and their reasons for changing jobs. We asked graduates about their prospects for the future, would they get an official license in their fields, and / or would they go on their own and start their own companies. Finally, we ended the survey with some questions about their level of satisfaction with their education.<br><br>Our conclusion of the study was the following: "GSAPP graduates are mostly employed in the field of their choosing, live on the eastern coast of the United States, and have ambitions of advancing in their respected professions. Although their are outliers, graduates tend to be satisfied with their education and have been consistently employed since graduating."</p>
-          <div class="row">
-            <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/employmentStatus.png">
-            </div>
-            <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/reasonsChange.png">
-            </div>
-          </div>
-          <p>To explore and interact with the full analysis please go to the <a href="http://gsapp-ap.com/">GSAPP.AP site</a>.</p>
+          <p>For more information about the current state of the project and to download the Master Plan, visit NYRP's <a href="https://www.nyrp.org/about/programs/the-haven-project/">project page</a>.</p>
         </div>
       </div>
 
