--- a/projects/hereNow.html
+++ b/projects/hereNow.html
@@ -75,7 +75,7 @@
           <p>HERE NOW! SOCIAL MEDIA AND THE PSYCHOLOGICAL CITY</p>
         </div>
         <div class="project-subtitle">
-          <p>This project was developed in collaboration at the <a href="http://spatialinformationdesignlab.org/">Spatial Information Design Lab</a> in collaboration with Sarah Williams, Georgia Bullen, Francis Tan and Noa Youse.</p>
+          <p>This project was developed at the <a href="http://spatialinformationdesignlab.org/">Spatial Information Design Lab</a> in collaboration with Sarah Williams, Georgia Bullen, Francis Tan and Noa Youse.</p>
         </div>
         <div class="project-description">
           <p>Social media are increasingly becoming part of our everyday lives, from connecting with friends and sharing images to exploring cities through location-based applications. These new services have given us a different vantage point from which to understand, explore, navigate, and geographically record the places we live.<br><br>Sites such as Foursquare and Facebook allow us to spatially mark our explorations in the city, creating rich databases that hold digital imprints of our interactions. To analyze these traces, the Foursquare and Facebook Application Programming Interfaces (API’s) were used to access location-based data to determine where social media users broadcast that they are “Here Now”. Analysis of this geographic data exposed the psycho-geography and economic terrain of New York City’s social media users.</p>
