--- a/projects/portToPort.html
+++ b/projects/portToPort.html
@@ -68,51 +68,41 @@
 
       <!-- *********** REST ************* -->
       <div class="container">
-        <img class="img-responsive" src="../assets/img/gsappAP/map.png">
+        <img class="img-responsive" src="../assets/img/PortToPort_01.png">
       </div>
       <div class="container">
         <div class="project-title">
-          <p>GSAPP ALUMNI PROJECT</p>
+          <p>PORT TO PORT</p>
         </div>
         <div class="project-subtitle">
-          <p>This project was developed in collaboration with Steven Sanchez.</p>
+          <p>This project was developed at the <a href="http://spatialinformationdesignlab.org/">Spatial Information Design Lab</a>, in collaboration with Thomson Reuters Research Unit.</p>
         </div>
         <div class="row">
           <div class="col-md-4">
-          <div class="project-site-button" style="background-color:#66CCCC">
-            <a href="http://gsapp-ap.com/"><p>VISIT THE INTERACTIVE PROJECT SITE</p></a>
+          <div class="project-site-button" style="background-color:#8ad1db">
+            <a href="http://spatialinformationdesignlab.org/project_sites/port_to_port/"><p>VISIT THE INTERACTIVE PROJECT SITE</p></a>
           </div>
         </div>
       </div>
         <div class="project-description">
-          <p>GSAPP.AP visualizes the responses of 5 years of <a href="https://www.arch.columbia.edu/">GSAPP</a> graduates in an attempt to capture and analyze the state and evolution of the school's alumni. Based on a <a href="../assets/pdf/gsapp6mgrad.pdf">previous survey</a> of the 2012 Masters of Architecture class, GSAPP.AP compares the different disciplines and graduating classes that make up the school, thus providing insights into the school's professions and helping record the different paths its graduates have taken. <br><br>The initial questionnaire was sent out to more than 1,900 graduates over the months of February and March 2014, and it included questions about their background, their job search, their current jobs and their views towards the future. Specific questions like "how many job applications did you send before getting a job?" or "how many job interviews did you go to?" provided a glimpse into the hard process of getting a job in the middle of a recession.</p>
+          <p>Using D3 as an interactive web platform we designed a map interface that is scaled globally while embedded with local stories about energy movement from port to port. Data can be viewed across time, which reveal changes in patterns of movement as the geopolitics, price of oil, and conditions at specific ports change.</p>
           <div class="row">
             <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/applicationsInterviews.png">
+              <img class="img-responsive losO" src="../assets/img/PortToPort_02.png">
             </div>
             <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/lengthJobSearch.png">
+              <img class="img-responsive losO" src="../assets/img/PortToPort_03.png">
             </div>
           </div>
-          <p>In addition, GSAPP.AP also delved into the often difficult to get salary information where differences between disciplines and, more importantly, gender are revealed. Right off from graduation, women are generally paid less than men and while certain fields display less of a discrepancy, the gender pay gap can be seen in all of them.</p>
+          <p>90% of all goods worldwide are moved by ship, but shipping is mostly invisible. More than 300 million Metric Tons of energy are shipped in and out of the United States each year, in 60,000 shipments. This project presents the ports and paths of the 2.7 billion Metric Tons of energy shipped through more than 90 US ports from 2002 - 2012. Using data assembled by Thomson Reuters, Port to Port maps global oil shipping routes as well as other forms of energy navigating ocean territories to and from the United States.</p>
           <div class="row">
             <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/salaryGeneral.png">
+              <img class="img-responsive losO" src="../assets/img/PortToPort_04.png">
             </div>
             <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/salaryGender.png">
+              <img class="img-responsive losO" src="../assets/img/PortToPort_05.png">
             </div>
           </div>
-          <p>GSAPP.AP also looked into the types of companies graduates are working in, and the type of work they are doing, as well as people's stability in those companies and their reasons for changing jobs. We asked graduates about their prospects for the future, would they get an official license in their fields, and / or would they go on their own and start their own companies. Finally, we ended the survey with some questions about their level of satisfaction with their education.<br><br>Our conclusion of the study was the following: "GSAPP graduates are mostly employed in the field of their choosing, live on the eastern coast of the United States, and have ambitions of advancing in their respected professions. Although their are outliers, graduates tend to be satisfied with their education and have been consistently employed since graduating."</p>
-          <div class="row">
-            <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/employmentStatus.png">
-            </div>
-            <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/reasonsChange.png">
-            </div>
-          </div>
-          <p>To explore and interact with the full analysis please go to the <a href="http://gsapp-ap.com/">GSAPP.AP site</a>.</p>
         </div>
       </div>
 
