--- a/projects/scienceSurveyor.html
+++ b/projects/scienceSurveyor.html
@@ -68,51 +68,34 @@
 
       <!-- *********** REST ************* -->
       <div class="container">
-        <img class="img-responsive" src="../assets/img/gsappAP/map.png">
+        <img class="img-responsive" src="../assets/img/ScienceSurveyor_01.png">
       </div>
       <div class="container">
         <div class="project-title">
-          <p>GSAPP ALUMNI PROJECT</p>
+          <p>SCIENCE SURVEYOR</p>
         </div>
         <div class="project-subtitle">
-          <p>This project was developed in collaboration with Steven Sanchez.</p>
+          <p>This project was developed in collaboration with Marguerite Holloway, Dennis Tenen, Laura Kurgan, Grga Basic and a team of professors and researchers at Stanford University. Funding for this project was generously provided by the <a href="https://brown.columbia.edu/">Brown Institute for Media Innovation</a>.</p>
         </div>
         <div class="row">
           <div class="col-md-4">
-          <div class="project-site-button" style="background-color:#66CCCC">
-            <a href="http://gsapp-ap.com/"><p>VISIT THE INTERACTIVE PROJECT SITE</p></a>
+          <div class="project-site-button" style="background-color:#c8dee7">
+            <a href="https://science-surveyor.github.io/"><p>VISIT THE INTERACTIVE PROJECT SITE</p></a>
           </div>
         </div>
       </div>
         <div class="project-description">
-          <p>GSAPP.AP visualizes the responses of 5 years of <a href="https://www.arch.columbia.edu/">GSAPP</a> graduates in an attempt to capture and analyze the state and evolution of the school's alumni. Based on a <a href="../assets/pdf/gsapp6mgrad.pdf">previous survey</a> of the 2012 Masters of Architecture class, GSAPP.AP compares the different disciplines and graduating classes that make up the school, thus providing insights into the school's professions and helping record the different paths its graduates have taken. <br><br>The initial questionnaire was sent out to more than 1,900 graduates over the months of February and March 2014, and it included questions about their background, their job search, their current jobs and their views towards the future. Specific questions like "how many job applications did you send before getting a job?" or "how many job interviews did you go to?" provided a glimpse into the hard process of getting a job in the middle of a recession.</p>
+          <p>Science Surveyor uses cutting-edge algorithms to characterize the scientific literature on a selected topic. Using the abstract and citations of a peer-reviewed paper, Science Surveyor provides journalists context about that paper in several easy-to-read visualizations.</p>
           <div class="row">
             <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/applicationsInterviews.png">
+              <img class="img-responsive losO" src="../assets/img/ScienceSurveyor_02.png">
             </div>
             <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/lengthJobSearch.png">
+              <img class="img-responsive losO" src="../assets/img/ScienceSurveyor_04.png">
             </div>
           </div>
-          <p>In addition, GSAPP.AP also delved into the often difficult to get salary information where differences between disciplines and, more importantly, gender are revealed. Right off from graduation, women are generally paid less than men and while certain fields display less of a discrepancy, the gender pay gap can be seen in all of them.</p>
-          <div class="row">
-            <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/salaryGeneral.png">
-            </div>
-            <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/salaryGender.png">
-            </div>
-          </div>
-          <p>GSAPP.AP also looked into the types of companies graduates are working in, and the type of work they are doing, as well as people's stability in those companies and their reasons for changing jobs. We asked graduates about their prospects for the future, would they get an official license in their fields, and / or would they go on their own and start their own companies. Finally, we ended the survey with some questions about their level of satisfaction with their education.<br><br>Our conclusion of the study was the following: "GSAPP graduates are mostly employed in the field of their choosing, live on the eastern coast of the United States, and have ambitions of advancing in their respected professions. Although their are outliers, graduates tend to be satisfied with their education and have been consistently employed since graduating."</p>
-          <div class="row">
-            <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/employmentStatus.png">
-            </div>
-            <div class="col-md-6">
-              <img class="img-responsive losO" src="../assets/img/gsappAP/reasonsChange.png">
-            </div>
-          </div>
-          <p>To explore and interact with the full analysis please go to the <a href="http://gsapp-ap.com/">GSAPP.AP site</a>.</p>
+          <p>One of the biggest challenges facing science journalists is the ability to quickly contextualize journal articles they are reporting on deadline. A science reporter must rapidly get a sense of what has come before in the field, understand whether the new paper represents a significant advance or not, and establish whether this finding is an outlier or part of the field’s consensus. Doing all that within a matter of hours or a few days is often impossible. The consequences of these limitations are serious and well documented. Science journalists are often overly dependent on expert sources, which encourages investigative complacency; they become vulnerable to presenting false balance and to covering articles that will be retracted; they sensationalize. As a consequence, the public often receives a mistaken view of science. Many people see science as a series of great new “discoveries” accompanied by a lot of hype; few understand its incremental character, its complexity, its nuance.</p>
+          <p>We propose designing a tool that can help science journalists and others to rapidly and effectively characterize the scientific literature for any topic they might cover, as a way to inform and assist news judgment and reporting. Science Surveyor seeks to do this through intuitive, clear interactive graphics that visualize trends in the scientific literature. It aims to show the centrality (or not) of the ideas in the new study, temporal patterns of publishing in the field, and social relationships (the networks of authors and institutions involved in related research).</p>
         </div>
       </div>
 
